<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input1"
        app:layout_constraintEnd_toStartOf="@+id/input1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nam"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input2"
        app:layout_constraintEnd_toStartOf="@+id/input2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fam"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input3"
        app:layout_constraintEnd_toStartOf="@+id/input3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/input2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input2"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/input3"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/reg_but"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reg_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="347dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

